--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -16,9 +16,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".NouvellePartie" />
+        <activity android:name=".AccueilActivity" />
         <activity android:name=".Reprendre" />
-        <activity android:name=".Scores"></activity>
+        <activity android:name=".Scores"/>
+        <activity android:name=".DifficulteActivity"/>
+        <activity android:name=".GameActivity">
+        </activity>
     </application>
 
 </manifest>
